too much stuff && fixing loading with $timeout

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -2151,7 +2151,7 @@ b i, .iconic-push {
     	opacity: 1;
     }
 } 
-.fade-out-animation.ng-leave, .fade-out-animation.ng-hide-remove {
+.fade-out-animation.ng-leave, .fade-out-animation.ng-hide-add {
 	-webkit-animation-duration: .8s;
 	animation-duration: .8s;
 	-webkit-animation-fill-mode: both;
